--- a/launch_data.json
+++ b/launch_data.json
@@ -1,37 +1,22 @@
 [
-	{
-		"model": "openai/gpt-oss-120b",
-		"dp_size": 2,
-		"tp_size": 1,
-		"ep": 1,
-		"envs": {
-			"VLLM_ALL2ALL_BACKEND": "deepep_low_latency",
-			"VLLM_MXFP4_USE_MARLIN": 1,
-			"VLLM_MOE_DP_CHUNK_SIZE": 256
-		}
-	},
-	{
-		"model": "openai/gpt-oss-120b",
-		"dp_size": 2,
-		"tp_size": 1,
-		"ep": 1,
-		"envs": {
-			"VLLM_ALL2ALL_BACKEND": "deepep_high_throughput",
-			"VLLM_MXFP4_USE_MARLIN": 1
-		}
-	},
-	{
-		"model": "openai/gpt-oss-120b",
-		"dp_size": 2,
-		"tp_size": 1,
-		"ep": 1,
-		"envs": {
-			"VLLM_ALL2ALL_BACKEND": "deepep_high_throughput",
-			"VLLM_MXFP4_USE_MARLIN": 0
-		}
-	},
-	{
-		"model": "openai/gpt-oss-120b",
-		"tp_size": 2
-	}
+    {
+        "model": "Qwen/Qwen3-30B-A3B-FP8",
+        "dp_size": 2,
+        "tp_size": 1,
+        "ep": 1,
+        "envs": {
+            "VLLM_ALL2ALL_BACKEND": "deepep_low_latency",
+            "VLLM_USE_DEEP_GEMM": 1
+        }
+    },
+    {
+        "model": "Qwen/Qwen3-30B-A3B-FP8",
+        "dp_size": 2,
+        "tp_size": 1,
+        "ep": 1,
+        "envs": {
+            "VLLM_ALL2ALL_BACKEND": "deepep_high_throughput",
+            "VLLM_USE_DEEP_GEMM": 1
+        }
+    }
 ]
